# Parallelism-theory

./: .gitignore
sem01/: CMakeLists.txt  README.md  main.cpp
sem02/task1/: CMakeLists.txt  main.cpp
sem02/task2/: CMakeLists.txt  main.cpp
sem02/task3/: CMakeLists.txt  main.cpp  task3.cpp
task1/: CMakeLists.txt  README.md  main.cpp
